--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -49,7 +49,7 @@
                  <td class="text-center col-2"><%= Feedbacks[count].FirstName %></td>
                  <td class="text-center col-2"><%= Feedbacks[count].LastName %></td>
                  <td class="text-center col-3"><%= Feedbacks[count].Feedback %></td>
-                 <td class="text-center col-2" span id=stars><%= Feedbacks[count].Stars %></td>
+                 <td class="text-center col-2"><%= Feedbacks[count].Stars %></td>
                  <td class="text-center col-3"><%= Feedbacks[count].Comments %></td>
               </tr>
           <% } %>
@@ -61,30 +61,7 @@
 <!--get stars should get info from db-->
 
 
-<script>
-  document.getElementById("stars").innerHTML = getStars(3.6);
 
-function getStars(rating) {
-
-  // Round to nearest half
-  rating = Math.round(rating * 2) / 2;
-  let output = [];
-
-  // Append all the filled whole stars
-  for (var i = rating; i >= 1; i--)
-    output.push('<i class="fa fa-star" aria-hidden="true" style="color: gold;"></i>&nbsp;');
-
-  // If there is a half a star, append it
-  if (i == .5) output.push('<i class="fa fa-star-half-o" aria-hidden="true" style="color: gold;"></i>&nbsp;');
-
-  // Fill the empty stars
-  for (let i = (5 - rating); i >= 1; i--)
-    output.push('<i class="fa fa-star-o" aria-hidden="true" style="color: gold;"></i>&nbsp;');
-
-  return output.join('');
-
-}
-</script>
 
 <style>
 
