--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,8 +2,6 @@
 
 <%- include partial/main_nav.ejs %>
 
-
-
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -18,66 +16,203 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+<!-- Main Content -->
 <!DOCTYPE html>
 <html>
   <head>
     <title></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+      <link rel='stylesheet' href='/stylesheets/style.css' /> 
+    
+ 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
-  <h1>About Us </h1>
-    <div class="container">
-    
-     <br>
-    <h5> 
-
-      Over the past 50 years, Centennial College has transformed itself 
-      from a local community college to a worldly institution, with a 
-      presence in countries like China, India, South Korea and Brazil. <br><br>
-      No matter who you are, or where you’re from, your journey to success can start here.
-
-      We believe a Centennial education is an education without borders. We’ve re-created our College, giving ourselves a unique position in the marketplace and the world. <br> <br> We are now prepared for the next set of challenges:  be more innovative and entrepreneurial, to further exploit the benefits of technology, to creatively e
-      ngage our employees, to build more bridges with communities and employers, and to see our graduates do meaningful work and have meaningful lives.
-
-
-    </h5>
-  
-   
-
-    
-      
+    <h1><%= title %></h1>
+     <div class="container">
+    <hr>
+</div>
+  <section class="about">
+    <div class="main">
+      <div class="imgess">
+          <img src="/images/about.png">
+          <img src="/images/about2.png">
+        </div>
+      <div class="about-text">
+        <h2>Programms </h2>
+        <h5>of <span>Centennial</span> College</h5>
+        <p><span>Centennial</span> College has a variety of study programs for which you can also get student 
+            feedback from professor rankings. Our programs:
+            <div class="box">
+          <ol> 
+            <li>Architectural Technician</li>
+            <li>Addiction and Mental Health Worker</li>
+            <li>Aerospace Manufacturing Engineering Technology</li>
+            <li>Animation - 3D</li>
+            <li>Auto Body Repair Technician</li>
+            <li>Automation and Robotics - Electro-Mechanical Engineering Technology</li>
+            <li>Baking and Pastry Arts Management</li>
+            <li>Business - Marketing</li>
+            <li>Culinary Skills </li>
+            <li>Construction Project Management</li>
+            <li>Cybersecurity</li>
+            <li>Children's Media</li>
+            <li>Communications and Media Fundamentals</li>
+            <li>Community Development Work</li>
+            <li>Event Management</li>
+            <li>Financial Services</li>
+            <li>Game - Programming</li>
+            <li>Graphic Design</li>
+            <li>Health Informatics Technology</li>
+            <li>Human Resources Management</li>
+            <li>Mobile Applications Development</li>
+            <li>Software Engineering Technician</li>
+            <li>Strategic Management – Accounting Specialization</li>
+        </ol>
+          </div>
+      </div>
+    </div>
+  </section>    
     <style>
 h1{
   color: white;
   text-align: center;
 }
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+h2{
 
-p {
-    color: black;
-    
-    text-align:justify;
-   
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-   }
-
-   .container{
-  background-color: #fff;
-  height: 330px;
-  border-radius: 20px;
-  width: 500px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-top: 50px;
-
+}
+.box{
+  width: 100%;
+}
+.box ol{
+  position: relative;
+  padding: 0px 20px;
+  margin-top: -10px;
+}
+.box ol li{
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  background: 0 5px 25px rgba(0,0,0,.1);
+  transition: transform 0.6s;
+}
+.box ol:hover li{
+  opacity: 0.2;
+}
+.box ol li:hover{
+  border-radius: 10px;
+  transform: scale(1.1);
+  list-style: none;
+  z-index: 100;
+  background: #98F725;
+  color: #191919;
+  opacity: 1;
+  background: 0 5px 25px rgba(0,0,0,.2);
 }
 
 
+span {
+    color: #98F725;
+}
+.content {
+    position: absolute;
+    top: 50%;
+    left: 8%;
+    transform: translateY(-50%);
+}
+h1 {
+    color: white;
+    margin: 20px 0px 20px;
+    font-size: 75px;
+}
+.about {
+    width: 100%;
+    padding: 100px 0px;
+    background-color: #191919;
+    border-radius: 25px;
+
+}
+.imgess{
+  display: grid;
+
+}
+.about img {
+    height: auto;
+    width: 500px;
+}
+
+.about-text {
+    width: 550px;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-text h2 {
+    color: white;
+    font-size: 75px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-text h5 {
+    color: white;
+    letter-spacing: 2px;
+    font-size: 22px;
+    margin-bottom: 25px;
+    text-transform: capitalize;
+}
+
+.about-text p {
+    color: white;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+
+.visit{
+    background-color: #98F725;
+    color: #191919;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+.visit:hover {
+    background-color: transparent;
+    text-decoration: none;
+    color: #f9004d;
+    border: 2px solid #f9004d;
+    cursor: pointer;
+}
+.service {
+    background: #101010;
+    width: 100%;
+    padding: 100px 0px;
+}
+h5 {
+    color: white;
+    font-size: 23px;
+    margin-bottom: 15px;
+}
+
     </style> 
-
-
-
-
     </body>
     </html>
 
