--- a/views/studfeeds.ejs
+++ b/views/studfeeds.ejs
@@ -50,6 +50,7 @@
                  <td class="text-center col-2"><%= Feedbacks[count].FirstName %></td>
                  <td class="text-center col-2"><%= Feedbacks[count].LastName %></td>
                  <td class="text-center col-3"><%= Feedbacks[count].Feedback %></td>
+                 <td class="text-center col-1"><%= Feedbacks[count].Stars %></td>
                  <td class="text-center col-3"><%= Feedbacks[count].Comments %></td>
                  <td class="text-center col-1">
                    <a href="/addcomment/<%= Feedbacks[count]._id %>">
