--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -81,10 +81,9 @@
 
   <style>
 .container{
-  margin-top:50px;
   padding: 25px;
-  background-color: #fff;
-  height: 350px;
+  background-color: #191919;
+  height: 360px;
   border-radius: 25px;
   width: 500px;
 }
@@ -94,16 +93,25 @@
   text-transform: capitalize;
 font-size: large;
 padding-top: 130px;
+color:white;
+}
+
+p{
+  color:white;
 }
 
 h1{
   color: white;
   text-align: center;
+  padding-bottom: 20px;
+  font-size: 75px;
+
 }
 label{
     display: inline-block;
     width: 250px;
     text-align: left; /*Change to right here if you want it close to the inputs*/
+    color:white;
 }
 input {
   display: inline-block;
@@ -136,7 +144,7 @@ input {
 
 .button-24:hover,
 .button-24:active {
-  background-color: initial;
+  background-color: white;
   background-position: 0 0;
   color: #000000;
   text-decoration: none;
