--- a/views/profrate.ejs
+++ b/views/profrate.ejs
@@ -35,7 +35,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-
+<hr>
 <div class="container-fluid">
   <table class="table table-hover rounded-circle ">
            <tr class="d-flex">
@@ -64,11 +64,13 @@
 <style>
 
 
-
+.table-hover tbody tr:hover td {
+    background: grey;
+}
 
 
 .container-fluid{
-  background-color: #fff;
+  background-color: #191919;
   border-radius: 25px;
   padding-left: 75px;
   padding-bottom: 15px;
@@ -82,20 +84,23 @@ h1{
   color: white;
   text-align: center;
   padding-bottom: 20px;
+  font-size: 75px;
+
 }
 .table{
-    background-color: white;
+  background-color: #191919;
     
 }
 
 th{
 color:black;
-background-color:darkgrey;
+background-color: #98F725;
 
 }
 
 td{
-color:black
+color:white;
+
 }
 </style>
 
