--- a/views/signup/signup.ejs
+++ b/views/signup/signup.ejs
@@ -42,11 +42,15 @@
   margin-left: 300px;
   margin-top:120px;
   padding: 25px;
-  background-color: #fff;
+  background-color: #191919;
   height: 250px;
   border-radius: 25px;
   width: 500px;
   padding-left: 125px;
+}
+
+h1{
+  color:white;
 }
 
 label{
@@ -54,6 +58,7 @@ label{
     float: left;
     width: 250px;
     text-align: left; /*Change to right here if you want it close to the inputs*/
+    color:white;
 }
 input {
   display: inline-block;
@@ -87,7 +92,7 @@ input {
 
 .button-24:hover,
 .button-24:active {
-  background-color: initial;
+  background-color: white;
   background-position: 0 0;
   color: #000000;
   text-decoration: none;
