--- a/views/addcomment.ejs
+++ b/views/addcomment.ejs
@@ -6,21 +6,107 @@
     <link rel="icon" href="/images/feedback.png">
   </head>
   <body>
+
+
+
+    <div class="container">
     <h1><%= title %></h1>
   
-    <p>Welcome to <%= title %></p>
 
   <form method="POST">
     <label for="NickName">Nick Name:</label>
     <input type="text" name="NickName" id="NickName">
     <br>
+    <br>
     <label for="Comment">Your Comment:</label>
     <input type="text" name="Comment" id="Comment">
     <br>
-    <input type="submit" placeholder="Save Changes">
+    <br>
+    <input class="button-24" type="submit" placeholder="Save Changes">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+    <button class="button-24"><a href="/studfeeds">Cancel</a></button>
   </form>
   <br>
-    <button><a href="/studfeeds">Cancel</a></button>
+   
 
+    </div>
+
+
+
+    <style>
+
+    .container{
+      background-color: #191919;
+      width:250px;
+      margin: 0 auto;
+      padding: 20px;
+      margin-top:50px;
+      padding-left: 100px;
+      box-shadow:0px 2px 7px 1px #aa9191;
+      border-radius: 25px;
+      }
+
+      h1{
+        color:white;
+      }
+
+      label{
+        color:white;
+      }
+.button-24 {
+  background: black;
+  border: 1px solid #ffffff;
+  border-radius: 4.5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 12px;
+  font-weight: 60000;
+  line-height: 12px;
+  min-height: 30px;
+  outline: 0;
+  padding: 6px 7px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+.button-24:hover,
+.button-24:active {
+  background-color: white;
+  background-position: 0 0;
+  color: black;
+  text-decoration: none;
+
+}
+
+.button-24:active {
+  opacity: .5;
+  text-decoration: none;
+
+}
+
+
+
+label{
+    display: inline-block;
+    width: 250px;
+    text-align: left; /*Change to right here if you want it close to the inputs*/
+}
+input {
+  display: inline-block;
+}
+
+
+
+
+    </style>
 </body>
 </html>
