--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -53,7 +53,7 @@
 <style>
 
     .container{
-      background:#FFFFFF;
+      background-color: #191919;
       width:250px;
       margin: 0 auto;
       padding: 20px;
@@ -62,9 +62,16 @@
       border-radius: 25px;
       }
 
-h1{
+      h1{
   color: white;
   text-align: center;
+  padding-bottom: 20px;
+  font-size: 75px;
+
+}
+
+label{
+color:white;
 }
 
 .button-24 {
@@ -94,7 +101,7 @@ h1{
 
 .button-24:hover,
 .button-24:active {
-  background-color: initial;
+  background-color: white;
   background-position: 0 0;
   color: #000000;
   text-decoration: none;
