some grammar fixing

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -41,7 +41,7 @@
           <img src="/images/about2.png">
         </div>
       <div class="about-text">
-        <h2>Programms </h2>
+        <h2>Programs </h2>
         <h5>of <span>Centennial</span> College</h5>
         <p><span>Centennial</span> College has a variety of study programs for which you can also get student 
             feedback from professor rankings. Our programs:
