fixed account div

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -69,7 +69,7 @@
             <li>Human Resources Management</li>
             <li>Mobile Applications Development</li>
             <li>Software Engineering Technician</li>
-            <li>Strategic Management – Accounting Specialization</li>
+            <li>Strategic Management - Accounting Specialization</li>
         </ol>
           </div>
       </div>
@@ -85,9 +85,7 @@ h1{
     margin: 0;
     box-sizing: border-box;
 }
-h2{
 
-}
 .box{
   width: 100%;
 }
