--- a/views/profrate.ejs
+++ b/views/profrate.ejs
@@ -74,12 +74,16 @@
   border-radius: 25px;
   padding-left: 75px;
   padding-bottom: 15px;
+  font-family: Verdana, sans-serif;
+font-size: 45px;
 }
 .d-flex{
   border-radius: 25px;
   overflow: hidden;
   margin-top: 40px;
 }
+
+
 h1{
   color: white;
   text-align: center;
